[gd_scene load_steps=9 format=3 uid="uid://du77jlb534rxn"]

[ext_resource type="Script" uid="uid://j7d15heavg1r" path="res://scenes/entities/lunge_fish.gd" id="1_1k1au"]
[ext_resource type="Texture2D" uid="uid://dlioy77shxlal" path="res://Assets/enemies/lungeFish.png" id="1_nca5c"]
[ext_resource type="AudioStream" uid="uid://dsmags3igy0yl" path="res://Assets/sounds/whitepop.ogg" id="3_5o7j4"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1k1au"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1k1au"]

[sub_resource type="Curve" id="Curve_1k1au"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_5o7j4"]
curve = SubResource("Curve_1k1au")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_yqrm8"]
particle_flag_disable_z = true
radial_velocity_min = 258.58997
radial_velocity_max = 1423.95
gravity = Vector3(0, -500, 0)
scale_min = 215.29
scale_max = 215.29
scale_curve = SubResource("CurveTexture_5o7j4")

[node name="lungeFish" type="CharacterBody2D" groups=["objects"]]
collision_layer = 2
script = ExtResource("1_1k1au")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-146, 0)
texture = ExtResource("1_nca5c")
flip_h = true

[node name="lungeFish" type="Area2D" parent="." groups=["dangerObj", "objects"]]

[node name="danger" type="CollisionShape2D" parent="lungeFish" groups=["dangerObj", "enemyHitbox", "objects"]]
position = Vector2(538, 0)
rotation = -1.5707964
scale = Vector2(53.353207, 78.26539)
shape = SubResource("CapsuleShape2D_1k1au")
debug_color = Color(0.8529746, 0.3114638, 0.52358174, 0.41960785)

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 200.0
target_desired_distance = 500.0
path_max_distance = 500.0
path_postprocessing = 1
debug_use_custom = true
debug_path_custom_color = Color(1, 0, 0, 1)
debug_path_custom_point_size = 150.0
debug_path_custom_line_width = 25.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(269, 0)
scale = Vector2(22.852972, 22.852972)
shape = SubResource("CircleShape2D_1k1au")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
modulate = Color(0.65, 0.8891667, 1, 1)
emitting = false
amount = 160
lifetime = 3.0
one_shot = true
speed_scale = 3.0
explosiveness = 1.0
local_coords = true
process_material = SubResource("ParticleProcessMaterial_yqrm8")

[node name="death" type="AudioStreamPlayer2D" parent="."]
position = Vector2(538, 0)
rotation = -1.5707964
scale = Vector2(55.219242, 55.219242)
stream = ExtResource("3_5o7j4")
max_distance = 11000.0

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="area_entered" from="lungeFish" to="." method="_on_lunge_fish_area_entered"]
[connection signal="link_reached" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_link_reached"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
